# skooda-mobile

./: .gitignore  build.sh  build_apk.sh  discovery.json  package-lock.json  package.json
.bin/: aarch64-linux-android-clang++
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  build_error.txt  build_revert_error.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/examples/: test.rs
src-tauri/src/: lib.rs  main.rs  mbtiles.rs  routing.rs
src/core/: navigation.js  stats.js  ui.js
src/features/chat/: chat.js
src/features/cyber/: cyber-utils.js  cyber.js
src/features/map/: map.js
src/features/qr/: qr.js
src/features/settings/: settings.js
src/features/vision/: vision.js
