[package]
name = "skooda-mobile"
version = "0.7.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "skooda_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
ed25519-dalek = "2"
x25519-dalek = "2"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
tauri-plugin-notification = "2"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
