[package]
name = "skooda-mobile"
version = "0.8.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "skooda_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.13.1", features = ["v4"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
native-tls = { version = "0.2", features = ["vendored"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
ed25519-dalek = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
chacha20poly1305 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1.0"
tauri-plugin-notification = "2"
thiserror = "1.0"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
